# docs/swagger.yaml
@@ -126,13 +126,6 @@ paths:
           name: x-access-token
           required: true
           description: token recibido de usuario
-      requestBody:
-        description: Body para eliminar un curso
-        required: true
-        content:
-          application/json:
-            schema:
-              $ref: '#/components/schemas/deleteCourse'
       responses:
         '200':
           description: Curso eliminado correctamente
@@ -438,16 +431,6 @@ components:
         location:
           type: string
           example: 'Corrientes'
-
-    deleteCourse:
-      type: object
-      properties:
-        course_id:
-          type: integer
-          example: 1
-        user_id:
-          type: integer
-          example: 1
 
     courseInfo:
       properties:
